# lunar-seismic-triggering

./: .gitignore  CONCLUSIONS_SUMMARY.md  PAPER_DRAFT.md  README.md  _build_notebook_02.py  _build_notebook_03.py  _build_notebook_04.py  _build_notebook_05.py  _build_notebook_06.py  _build_notebook_06_coulomb.py  _build_notebook_07.py  _build_notebook_08.py  _build_notebook_09.py  _build_notebook_10.py  _build_notebook_11.py  _build_notebook_12.py  _extract_nb_source.py  pyproject.toml  requirements.txt
data/processed/: earthquakes_coulomb_physics.csv  earthquakes_coulomb_stress.csv  earthquakes_ecuatorial_subset.csv  earthquakes_final_physics.csv  earthquakes_global_robust.csv  earthquakes_lag_analysis.csv
notebooks/: 01_data_ingestion.ipynb  02_full_catalog_processing.ipynb  03_statistical_analysis.ipynb  04_spatial_analysis.ipynb  05_lag_analysis.ipynb  06_coulomb_mechanics.ipynb  06_coulomb_stress.ipynb  07_true_cfs_mechanisms.ipynb  08_statistical_robustness.ipynb  09_montecarlo_validation.ipynb  10_grl_final_robustness.ipynb  11_declustering_sensitivity.ipynb  12_thrust_only_validation.ipynb
results/maps/: 04_epicenters_map.html
results/statistics/: declustering_sensitivity.csv  thrust_only_kpis.csv
src/lunar_trigger/: __init__.py
src/lunar_trigger/data/: __init__.py  ephemeris.py  usgs.py
src/lunar_trigger/physics/: __init__.py  coulomb.py
src/lunar_trigger/stats/: __init__.py  declustering.py  monte_carlo.py
src/lunar_trigger/utils/: __init__.py  paths.py
tests/: test_coulomb.py  test_declustering.py  test_monte_carlo.py
