[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar-trigger"
version = "0.1.0"
description = "Lunar tidal triggering of earthquakes: geomechanical and computational pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Ivan Andres Mena Contreras", email = "ivan.andrem@gmail.com" }
]
keywords = ["seismology", "lunar-tides", "coulomb-stress", "monte-carlo", "geophysics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "astropy>=5.3",
    "astroquery>=0.4.6",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
    "skyfield>=1.40.0",
    "scipy>=1.10.0",
    "joblib>=1.3.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "folium>=0.20.0",
    "seaborn>=0.13.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lunar_trigger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
